[package]
name = "tools"
version = "0.1.0"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
cfg-if = "1.0"
dirs = "3.0"
home = "0.5"
tokio = { version = "1.15", features = ["full"] }
regex = "1.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
num-traits = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
]

[target.'cfg(target_os="android")'.dependencies]
android-ndk-sys = "0.2"