[package]
name = "rtools"
version = "0.1.2"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
edition = "2021"
description = "Set of tools for my needs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/rtools"
repository = "https://github.com/VladasZ/rtools"

[dependencies]
log = "0.4"
cfg-if = "1.0"
dirs = "3.0"
regex = "1.5"
chrono = "0.4"
num-integer = "0.1"
simplelog = { version = "0.12", features = ["paris"] }
tokio = { version = "1.15", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
num-traits = "0.2"
backtrace = "0.3"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
]

[target.'cfg(target_os="android")'.dependencies]
android-ndk-sys = "0.2"

[build-dependencies]
cfg_aliases = "0.1"
