[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Set of tools for my needs"
edition = "2021"
homepage = "https://github.com/VladasZ/rtools"
license = "MIT OR Apache-2.0"
name = "rtools"
repository = "https://github.com/VladasZ/rtools"
version = "0.8.0"

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
chrono = "0.4"
dirs = "5.0"
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
mutants = "0.0.3"
rand = "0.8"
regex = "1.10"
serde_json = "1.0"
typed-builder = "0.18.0"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }


[target.'cfg(target_os="android")'.dependencies]
android-ndk-sys = "0.2"
android_logger = "0.13"

[build-dependencies]
cfg_aliases = "0.2.0"
