[package]
name = "tests"
version = "0.1.0"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
edition = "2021"
description = "Tests for rtools"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/rtools"
repository = "https://github.com/VladasZ/rtools"

[dependencies]
rtools = { path = "../rtools" }