[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Tests for rtools"
edition = "2021"
homepage = "https://github.com/VladasZ/rtools"
license = "MIT OR Apache-2.0"
name = "tests"
repository = "https://github.com/VladasZ/rtools"
version = "0.1.0"

[dependencies]
rtools = { path = "../rtools" }
